# student-api

./: README.md  pyproject.toml
app/: main.py
app/config/: db.py
app/models/: attendance.py  course.py  enrollment.py  grade.py  student.py
app/routers/: attendance.py  course.py  enrollment.py  grade.py  student.py
app/schemas/: attendance.py  course.py  enrollment.py  grade.py  student.py
app/utils/: helpers.py
todo/: main.py
todo/config/: db.py
todo/models/: todos.py
